@@ -13,6 +13,11 @@ Limitations:
 
 
 Revision History:
+ 23-Mar-2003
+Problems fixed:
+    1. ServletUnit had not implemented HttpServletRequest.getURL();
+    2. ServletUnit was always supplying a charset parameter, even when not requested.
+
  20-Mar-2003
 Problems fixed:
     1. ServletUnit had not implemented HttpServletRequest.getContentLength();
